# OpenSiegeEditorArchive

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/siege-editor/: CMakeLists.txt  IntersectionHandler.cpp  IntersectionHandler.hpp  LoadMapDialog.cpp  LoadMapDialog.hpp  MainWindow.cpp  MainWindow.hpp  SiegePipeline.cpp  SiegePipeline.hpp  editor.ui  main.cpp
examples/siege-editor/cfg/: ArgsConfig.cpp  IConfig.hpp  RegistryConfig.cpp  SteamConfig.cpp  UserConfig.cpp  WritableConfig.cpp  WritableConfig.hpp
examples/siege-editor/game/: ContentDb.cpp  ContentDb.hpp  GameObject.cpp  GameObject.hpp  ObjectDb.cpp  ObjectDb.hpp
examples/siege-editor/io/: BinaryReader.cpp  BinaryReader.hpp  FileNameMap.cpp  FileNameMap.hpp  FileNameUtils.hpp  Fuel.cpp  Fuel.hpp  FuelParser.cpp  FuelParser.hpp  FuelScanner.cpp  FuelScanner.hpp  IFileSys.hpp  LocalFileSys.cpp  LocalFileSys.hpp
examples/siege-editor/vsg/: Aspect.cpp  Aspect.hpp  AspectImpl.hpp  ReaderWriterASP.cpp  ReaderWriterASP.hpp  ReaderWriterRAW.cpp  ReaderWriterRAW.hpp  ReaderWriterRegion.cpp  ReaderWriterRegion.hpp  ReaderWriterSNO.cpp  ReaderWriterSNO.hpp  ReaderWriterSiegeNodeList.cpp  ReaderWriterSiegeNodeList.hpp
examples/siege-editor/world/: Region.cpp  Region.hpp  SiegeNode.cpp  SiegeNode.hpp
examples/vsgqtviewer/: CMakeLists.txt  editor.ui  main.cpp
examples/vsgqtviewer/cfg/: UserConfig.cpp  WritableConfig.cpp
examples/vsgqtviewer/io/: FileNameMap.cpp  FileNameMap.hpp  Fuel.cpp  FuelParser.hpp  IFileSys.hpp
examples/vsgqtviewer/vsg/: ReaderWriterRAW.cpp  ReaderWriterRegion.hpp  ReaderWriterSNO.hpp  ReaderWriterSiegeNodeList.hpp
include/vsgQt/: ViewerWindow.h
src/vsgQt/: ViewerWindow.cpp
